syntax = "proto3";
package main;

service Job {
  // Our SayHello rpc accepts HelloRequests and returns HelloReplies
  rpc TriggerCreateRebate (HelloRequest) returns (HelloReply);
}
message HelloRequest {
  // Request message contains the name to be greeted
  string name = 1;
}

message HelloReply {
  // Reply contains the greeting message
  string message = 1;
}